# docker-updater

./: .blueprint.json  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Docker.test.yml  Dockerfile  LICENSE  README.md  Taskfile.yml  exe.txt  package-lock.json  package.json  paths.txt  pnpm-lock.yaml  pyproject.toml  slim.report.json  start.sh  tmp.txt
.config/: package-lock.json  variables.json
.config/taskfiles/docker/: Taskfile-build.yml  Taskfile-test.yml  Taskfile.yml
docs/: CONTRIBUTING.md  slim.brew.report.json  slim.dind.report.json  slim.extended.report.json  slim.golang.report.json  slim.poetry.report.json  slim.updater.report.json
local/: dind.sh  exe.txt  package-lock.json  paths.txt  slim-exec.sh
local/slim/: install.txt
test-output/androidstudio/: Taskfile.yml  package.json
test/output-androidstudio/: Taskfile.yml  package.json
test/output-stylog/: Taskfile.yml
test/structure/: dind.yml  extended.yml
